Added central system class